fix paths in html

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -20,21 +20,21 @@
 <body class="white-text">
     <nav class="nav-extended">
         <div class="nav-wrapper">
-            <a href="index.html" class="brand-logo"><i class="fa-solid fa-chess-king"></i>Check-urs.com</a>
+            <a href="/" class="brand-logo"><i class="fa-solid fa-chess-king"></i>Check-urs.com</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="index.html"><i class="material-icons left">home</i> Home</a></li>
-                <li><a href="play.html"><i class="material-icons left">flag</i> Play now!</a></li>
-                <li><a href="login.html"><i class="material-icons left">person</i> Login</a></li>
-                <li><a href="dashboard.html"><i class="material-icons left">dashboard</i> My Games</a></li>
+                <li><a href="/"><i class="material-icons left">home</i> Home</a></li>
+                <li><a href="play"><i class="material-icons left">flag</i> Play now!</a></li>
+                <li><a href="login"><i class="material-icons left">person</i> Login</a></li>
+                <li><a href="dashboard"><i class="material-icons left">dashboard</i> My Games</a></li>
             </ul>
         </div>
     </nav>
     <ul class="right sidenav" id="mobile-demo">
-        <li><a href="index.html"><i class="material-icons left">home</i> Home</a></li>
-        <li><a href="play.html"><i class="material-icons left">flag</i> Play now!</a></li>
-        <li><a href="login.html"><i class="material-icons left">person</i> Login</a></li>
-        <li><a href="dashboard.html"><i class="material-icons left">dashboard</i> My Games</a></li>
+        <li><a href="/"><i class="material-icons left">home</i> Home</a></li>
+        <li><a href="play"><i class="material-icons left">flag</i> Play now!</a></li>
+        <li><a href="login"><i class="material-icons left">person</i> Login</a></li>
+        <li><a href="dashboard"><i class="material-icons left">dashboard</i> My Games</a></li>
     </ul>
 
     <div class="container blue-grey lighten-1 big-round-section">
@@ -61,7 +61,7 @@
                         <td>Mudasir</td>
                         <td>Win</td>
                         <td>
-                            <a class="btn-small waves-effect waves-light" href="detail.html">
+                            <a class="btn-small waves-effect waves-light" href="detail">
                                 <i class="material-icons right">edit</i>
                                 Info/Edit
                             </a>
@@ -80,7 +80,7 @@
                         <td>Joe</td>
                         <td>Win</td>
                         <td>
-                            <a class="btn-small waves-effect waves-light" href="detail.html">
+                            <a class="btn-small waves-effect waves-light" href="detail">
                                 <i class="material-icons right">edit</i>
                                 Info/Edit
                             </a>
@@ -99,7 +99,7 @@
                         <td>Anonymous</td>
                         <td>Loss</td>
                         <td>
-                            <a class="btn-small waves-effect waves-light" href="detail.html">
+                            <a class="btn-small waves-effect waves-light" href="detail">
                                 <i class="material-icons right">edit</i>
                                 Info/Edit
                             </a>
