--- a/views/detail.html
+++ b/views/detail.html
@@ -21,21 +21,21 @@
 <body>
     <nav class="nav-extended">
         <div class="nav-wrapper">
-            <a href="index.html" class="brand-logo"><i class="fa-solid fa-chess-king"></i>Check-urs.com</a>
+            <a href="/" class="brand-logo"><i class="fa-solid fa-chess-king"></i>Check-urs.com</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="index.html"><i class="material-icons left">home</i> Home</a></li>
-                <li><a href="play.html"><i class="material-icons left">flag</i> Play now!</a></li>
-                <li><a href="login.html"><i class="material-icons left">person</i> Login</a></li>
-                <li><a href="dashboard.html"><i class="material-icons left">dashboard</i> My Games</a></li>
+                <li><a href="/"><i class="material-icons left">home</i> Home</a></li>
+                <li><a href="play"><i class="material-icons left">flag</i> Play now!</a></li>
+                <li><a href="login"><i class="material-icons left">person</i> Login</a></li>
+                <li><a href="dashboard"><i class="material-icons left">dashboard</i> My Games</a></li>
             </ul>
         </div>
     </nav>
     <ul class="right sidenav" id="mobile-demo">
-        <li><a href="index.html"><i class="material-icons left">home</i> Home</a></li>
-        <li><a href="play.html"><i class="material-icons left">flag</i> Play now!</a></li>
-        <li><a href="login.html"><i class="material-icons left">person</i> Login</a></li>
-        <li><a href="dashboard.html"><i class="material-icons left">dashboard</i> My Games</a></li>
+        <li><a href="/"><i class="material-icons left">home</i> Home</a></li>
+        <li><a href="play"><i class="material-icons left">flag</i> Play now!</a></li>
+        <li><a href="login"><i class="material-icons left">person</i> Login</a></li>
+        <li><a href="dashboard"><i class="material-icons left">dashboard</i> My Games</a></li>
     </ul>
     
     <div class="container  big-round-section white-text">
