--- a/views/index.html
+++ b/views/index.html
@@ -19,33 +19,33 @@
 <body class="white-text">
     <nav class="nav-extended">
         <div class="nav-wrapper">
-            <a href="index.html" class="brand-logo"><i class="fa-solid fa-chess-king"></i>Check-urs.com</a>
+            <a href="/" class="brand-logo"><i class="fa-solid fa-chess-king"></i>Check-urs.com</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="index.html"><i class="material-icons left">home</i> Home</a></li>
-                <li><a href="play.html"><i class="material-icons left">flag</i> Play now!</a></li>
-                <li><a href="login.html"><i class="material-icons left">person</i> Login</a></li>
-                <li><a href="dashboard.html"><i class="material-icons left">dashboard</i> My Games</a></li>
+                <li><a href="/"><i class="material-icons left">home</i> Home</a></li>
+                <li><a href="play"><i class="material-icons left">flag</i> Play now!</a></li>
+                <li><a href="login"><i class="material-icons left">person</i> Login</a></li>
+                <li><a href="dashboard"><i class="material-icons left">dashboard</i> My Games</a></li>
             </ul>
         </div>
     </nav>
     <ul class="right sidenav" id="mobile-demo">
-        <li><a href="index.html"><i class="material-icons left">home</i> Home</a></li>
-        <li><a href="play.html"><i class="material-icons left">flag</i> Play now!</a></li>
-        <li><a href="login.html"><i class="material-icons left">person</i> Login</a></li>
-        <li><a href="dashboard.html"><i class="material-icons left">dashboard</i> My Games</a></li>
+        <li><a href="/"><i class="material-icons left">home</i> Home</a></li>
+        <li><a href="play"><i class="material-icons left">flag</i> Play now!</a></li>
+        <li><a href="login"><i class="material-icons left">person</i> Login</a></li>
+        <li><a href="dashboard"><i class="material-icons left">dashboard</i> My Games</a></li>
     </ul>
 
     <div class="container center-align big-round-section">
         <h1>Welcome!</h1>
         <h3>Let's Play!</h3>
         
-        <a class="btn" href="signup.html">
+        <a class="btn" href="signup">
             <i class="material-icons right">arrow_forward</i>
             Get started!
         </a>
         <br><br>
-        <a class="btn" href="login.html">
+        <a class="btn" href="login">
             <i class="material-icons right">beenhere</i>
             Sign In
         </a>
