--- a/views/signup.html
+++ b/views/signup.html
@@ -21,21 +21,21 @@
 <body>
     <nav class="nav-extended">
         <div class="nav-wrapper">
-            <a href="index.html" class="brand-logo"><i class="fa-solid fa-chess-king"></i>Check-urs.com</a>
+            <a href="/" class="brand-logo"><i class="fa-solid fa-chess-king"></i>Check-urs.com</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="index.html"><i class="material-icons left">home</i> Home</a></li>
-                <li><a href="play.html"><i class="material-icons left">flag</i> Play now!</a></li>
-                <li><a href="login.html"><i class="material-icons left">person</i> Login</a></li>
-                <li><a href="dashboard.html"><i class="material-icons left">dashboard</i> My Games</a></li>
+                <li><a href="/"><i class="material-icons left">home</i> Home</a></li>
+                <li><a href="play"><i class="material-icons left">flag</i> Play now!</a></li>
+                <li><a href="login"><i class="material-icons left">person</i> Login</a></li>
+                <li><a href="dashboard"><i class="material-icons left">dashboard</i> My Games</a></li>
             </ul>
         </div>
     </nav>
     <ul class="right sidenav" id="mobile-demo">
-        <li><a href="index.html"><i class="material-icons left">home</i> Home</a></li>
-        <li><a href="play.html"><i class="material-icons left">flag</i> Play now!</a></li>
-        <li><a href="login.html"><i class="material-icons left">person</i> Login</a></li>
-        <li><a href="dashboard.html"><i class="material-icons left">dashboard</i> My Games</a></li>
+        <li><a href="/"><i class="material-icons left">home</i> Home</a></li>
+        <li><a href="play"><i class="material-icons left">flag</i> Play now!</a></li>
+        <li><a href="login"><i class="material-icons left">person</i> Login</a></li>
+        <li><a href="dashboard"><i class="material-icons left">dashboard</i> My Games</a></li>
     </ul>
 
     <section id="signin">
@@ -45,7 +45,7 @@
                     <div class="input-field col s12 valign-wrapper">
                         <span class="col s3 offset-s3">Already have an account?</span>
                         <i class="material-icons right">arrow_forward</i>
-                        <a href="login.html" class="indigo lighten-1 col s2 offset-s1 btn-large waves-effect waves-light">Login</a>
+                        <a href="login" class="indigo lighten-1 col s2 offset-s1 btn-large waves-effect waves-light">Login</a>
                     </div>
                 </div>
                 <div class="row">
